Fixed camera icon float dropping. Fixed padding around collapse button. - In an old version of Firefox on Mac, the camera icon in the timeline would float drop. Increased width of wrapping div to fix this issue. - Fixed 10px padding set around the collapse button, which was visible in old version of Firefox on Mac.

--- a/web/css/bank.css
+++ b/web/css/bank.css
@@ -46,7 +46,6 @@ a.atcollapse {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-right: 0;
-  padding: 10px;
 }
 
 a.atcollapse:hover {
