--- a/web/css/wv.timeline.css
+++ b/web/css/wv.timeline.css
@@ -125,7 +125,7 @@ g.plot rect.data-bar-invisible {
 
 #timeline-header {
   margin-top: 2px;
-  width: 290px;
+  width: 296px;
 }
 
 #timeline-header .input-wrapper {
